# units

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  README_8md_source.html  _8ycm__extra__conf_8py.html  _8ycm__extra__conf_8py_a51f8bcdc9a3b791e6a88d798e6c786b3_cgraph.map  _8ycm__extra__conf_8py_a51f8bcdc9a3b791e6a88d798e6c786b3_cgraph.md5  _8ycm__extra__conf_8py_a6bb59f541be0dcbde53eba606d48ddf8_icgraph.map  _8ycm__extra__conf_8py_a6bb59f541be0dcbde53eba606d48ddf8_icgraph.md5  _8ycm__extra__conf_8py_a8989cb0b1047bef2c19aee16c05bbfa9_cgraph.map  _8ycm__extra__conf_8py_a8989cb0b1047bef2c19aee16c05bbfa9_cgraph.md5  _8ycm__extra__conf_8py_aa20d30f8cc08fc0ab076b4cf458e0d3d_icgraph.map  _8ycm__extra__conf_8py_aa20d30f8cc08fc0ab076b4cf458e0d3d_icgraph.md5  _8ycm__extra__conf_8py_ab67345b7d68998fc3ccd383c6a726a22_cgraph.map  _8ycm__extra__conf_8py_ab67345b7d68998fc3ccd383c6a726a22_cgraph.md5  _8ycm__extra__conf_8py_ab67345b7d68998fc3ccd383c6a726a22_icgraph.map  _8ycm__extra__conf_8py_ab67345b7d68998fc3ccd383c6a726a22_icgraph.md5  _8ycm__extra__conf_8py_source.html  annotated.html  bit-range-test_8cpp.html  bit-range-test_8cpp__incl.map  bit-range-test_8cpp__incl.md5  bit-range-test_8cpp_a22a0f8c2cd915cc4fa44e86e348cbf75_cgraph.map  bit-range-test_8cpp_a22a0f8c2cd915cc4fa44e86e348cbf75_cgraph.md5  bit-range-test_8cpp_a5a2deff871dfaa5993f1880136e7c181_cgraph.map  bit-range-test_8cpp_a5a2deff871dfaa5993f1880136e7c181_cgraph.md5  bit-range-test_8cpp_source.html  bit-range_8hpp.html  bit-range_8hpp__dep__incl.map  bit-range_8hpp__dep__incl.md5  bit-range_8hpp_source.html  classEigen_1_1CwiseBinaryOp.html  classEigen_1_1Matrix.html  (+1378 more)
erb-yml/: process-template  test.erb  test.yml
impl/: dim-base.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+93 more)
test/: .gitignore  CMakeLists.txt  Makefile  bit-range-test.cpp  catch.hpp  common-denom-test.cpp  dim-test.cpp  dimval-test.cpp  dyndim-base-test.cpp  eigen-compat-test.cpp  encoding-test.cpp  example1.cpp  gcd-test.cpp  main.cpp  normalized-pair-test.cpp  rational-base-test.cpp  rational-test.cpp  statdim-base-test.cpp  tests.cpp  units-test.cpp
(+64 files in other folders)
